# composefs-os

./: .gitignore  CLAUDE_CODE_HANDOFF.md  CONTRIBUTING.md  Cargo.toml  Containerfile.base  Containerfile.fedora  Containerfile.ubuntu  DESIGN.md  README.md  justfile
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  e2e.yml
examples/arch/: Containerfile
examples/fedora/: Containerfile  Containerfile.base
examples/ubuntu/: Containerfile
src/: cfsctl.rs  config.rs  install.rs  main.rs  rollback.rs  signing.rs  status.rs  switch.rs  upgrade.rs  verify.rs
tests/: INTEGRATION.md  e2e.py  prep_sb_vars.py
tools/: build-disk.sh
units/: cbootc-update.service  cbootc-update.timer
