[package]
name = "cbootc"
version = "0.1.0"
edition = "2024"
description = "Upgrade/rollback tool embedded in composefs-os images"
license = "MIT"
repository = "https://github.com/OWNER/composefs-os"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
toml = "0.8"
